# MediaHub

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitleaks.toml  .mcp.json  .pre-commit-config.yaml  .stylelintignore  .stylelintrc.json  .test_durations  .upptimerc.yml  CLAUDE.md  Dockerfile  GLOSSARY.md  LICENSE  Makefile  Procfile  README.md  START_HERE.md  THIRD_PARTY_LICENSES.md  docker-compose.yml  fly.toml  package-lock.json  pyproject.toml  render.yaml  requirements.txt  vercel.json
.claude/: settings.json
.claude/agents/: seo-backlinks.md  seo-cluster.md  seo-content.md  seo-dataforseo.md  seo-drift.md  seo-ecommerce.md  seo-flow.md  seo-geo.md  seo-google.md  seo-image-gen.md  seo-local.md  seo-maps.md  seo-performance.md  seo-schema.md  seo-sitemap.md  seo-sxo.md  seo-technical.md  seo-visual.md
.claude/hooks/: README.md  guard-edits.py  session-start.sh
.claude/skills/: seo  seo-audit  seo-backlinks  seo-cluster  seo-competitor-pages  seo-content  seo-content-brief  seo-dataforseo  seo-drift  seo-ecommerce  seo-flow  seo-geo  seo-google  seo-hreflang  seo-image-gen  seo-images  seo-local  seo-maps  seo-page  seo-plan  seo-programmatic  seo-schema  seo-sitemap  seo-sxo  seo-technical
.github/: CODEOWNERS  dependabot.yml
.github/lighthouse/: lighthouserc.json
.github/workflows/: autopilot.yml  autotest-crossbrowser.yml  autotest.yml  contract.yml  dependabot-automerge.yml  lighthouse.yml  motion-visual-regression.yml  repo-hygiene.yml  responsive-design.yml  roadmap-autoupdate.yml  security.yml  unit-suite.yml  upptime.yml
autotest/: AUTONOMY_BOUNDARY.md  CHANGE_CLASSIFICATION.md  MERGE_204_205_NOTE.md  PROOF_CRITERION.md  PROOF_VERIFIER.md  README.md  __init__.py  _env.py  a11y.py  accept.py  acquire.py  baseline.py  build_loop.py  builder.py  cli_llm.py  coder.py  council.py  fix_loop.py  gitops.py  ground_truth.py  handover.py  loop.py  metrics.py  notify.py  openapi.py  report.py  roadmap.py  run.py  semantic.py  vision.py  visual_regression.py
autotest/baseline/: golden-baseline.json
autotest/calibration/: README.md  labels.jsonl  precision.json
autotest/reports/: BUGS.md  METRICS.md  NEEDS_ATTENTION.md  builder_state.json  ledger.json
bencium-marketplace-main/.claude-plugin/: marketplace.json
claude-marketplace-main/: .gitignore
data/: README.md  patterns.jsonl  quals.json  secrets.json.example  stage_a_color_inventory.csv
data/brand_kits/: fad26e647e9b.json
data/key_dates/: README.md  football.yaml  swimming.yaml
data/ontology/: column_headers.json  courses.json  genders.json  hytek_codes.json  strokes.json
data/research/: eism_search.json  meetmobile_format.json  parser_roadmap.md  search_formats_1.json  search_formats_2.json  search_hs_1.json  search_masters.json  search_timing.json  search_uk_1.json  search_uk_2.json  search_uk_3.json  search_uk_4.json  search_uk_5.json  search_usa_1.json  search_usa_2.json  search_usa_3.json  search_usa_4.json  search_usa_conf.json  swimresults_url.json
data/sport_profiles/: README.md  football.yaml  swimming.yaml
data/standards/: README.md
deploy/searxng/: settings.yml
docs/: API_INVENTORY.md  ARCHITECTURE.md  ARCHITECTURE_TARGET.md  ASSUMPTIONS.md  AUDIT_REPORTS.md  AUTONOMY_MODEL.md  CANVA_GAP_ANALYSIS.md  CHANGELOG.md  COMPLIANCE_AUDIT.md  COMPLIANCE_HANDOVER.md  CONTENT_PLANNER.md  CONVERSATIONAL_ASSISTANT.md  COUNCIL_GOVERNANCE.md  CREATIVE_SUITE_PARITY.md  DEEP_CODE_REVIEW_2026-07.md  DEPENDENCY_LICENSING.md  DEPENDENCY_MAP.md  DEPLOYMENT.md  DETECTOR_BUS.md  DETECTOR_INVENTORY.md  DEVELOPMENT.md  ENV_INVENTORY.md  EXTENSION_GUIDE.md  FEATURE_INVENTORY.md  FORMAT_CATALOGUE.md  GENERATION.md  INTEROP.md  INVENTORY.md  KNOWN_ISSUES.md  LOG_SENTINEL.md  MCP_SERVER.md  PB_RANKER_DIAGNOSIS.md  PB_RANKER_FIX_WORKLIST.md  PB_VERIFICATION.md  PILOT_PLAYBOOK.md  POST_TYPE_TAXONOMY.md  PROMPT_INVENTORY.md  PUBLIC_API.md  PWA_MOBILE.md  RANKING.md  (+34 more)
docs/adr/: 0001-generation-engine-v2.md  0002-council-as-decision-authority.md  0002-decline-cloakbrowser-integration.md  0002-do-not-integrate-agentmemory.md  0002-no-jcode-integration-council-transcript.md  0002-no-jcode-integration.md  0006-no-jcode-integration.md  (+37 more)
legacy/: README.md  all_meets_raw.json  app_v3.py  build_seeds.py  run.py  run_with_demo.py.disabled  schema.sql  seed.py  select_meets.py  selected_meets.json  smoke5_confirmed_pb.json  smoke5_sample_audit.json  smoke_test5.py
monitoring/: README.md
samples/: README.md
scripts/: README.md  backup_mediahub.sh  build_corpus_index.py  build_export.py  build_inventories.py  docker-entrypoint.sh  eval_corpus.py  eval_pdf_accuracy.py  fetch_fonts.py  fetch_piper_voice.py  fetch_renderer_fonts.py  fetch_script_fonts.py  inventory_colors.py  make_audio_assets.py  make_demo_sample.py  motion_vr.py  probe_swimmingresults.py  purge_all_runs.py  regen_fonts_css.py  regen_motion_tokens.py  retry.sh  rewrite_imports.py  roadmap_autoupdate.py  run_audits.py  update_theme_snapshots.py  verify_variation.py  wipe_all_runs.py
src/: README.md
tests/: README.md  __init__.py  _helpers.py  _pw_chromium.py  _semantic.py  conftest.py  test_accent_geometry_g15.py  test_accent_override_flows_to_run.py  test_account_delete_ux.py  test_account_tokens.py  test_active_profile_memo.py  test_activity_achievements.py  test_activity_aria.py  test_activity_count_up.py  test_activity_feed.py  test_activity_run_errors.py  test_activity_schedule_summary.py  test_activity_scoping.py  test_ad_export.py  test_adaptive_theme_flag.py  test_adjustable_stagger.py  test_agpl_isolation.py  test_ai_core_gemini_parity.py  test_ai_core_llm_errors.py  test_animated_still.py  test_anthropic_alt_model_fallback.py  test_api_contract.py  test_api_docs_page.py  test_api_public_endpoints.py  test_api_public_openapi.py  test_api_public_ratelimit.py  test_api_public_scopes.py  test_api_public_tokens.py  test_archetype_duo_athlete_split.py  test_archetype_fit.py  test_archetype_g1_1_families.py  test_archetype_lint.py  test_archetype_magazine_cover.py  test_archetype_quote_led_recap.py  test_archetype_relay_collage.py  (+961 more)
(+1246 files in other folders)
