[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mediahub"
version = "9.0.0"
description = "Sport content automation: upload meet results, get social-ready captions, cards, and graphics."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Sweep / MediaHub team" }
]
keywords = ["sport", "swimming", "content-automation", "social-media", "ai"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Framework :: Flask",
]
dependencies = [
  "flask>=3.0",
  "markupsafe>=2.1",
  "requests>=2.31",
  "pdfplumber>=0.10",
  "pypdf>=4.0",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  # Spreadsheet ingestion (interpreter/ingest.py _extract_xlsx): read .xlsx
  # results deterministically, read-only. MIT-licensed.
  "openpyxl>=3.1",
  "Pillow>=10.0",
  # Phase 1.6 Stage B — Adaptive Theming Engine colour-science package.
  # See requirements.txt and docs/THEMING.md.
  "materialyoucolor>=3.0",
  "coloraide>=4.0",
  "numpy>=1.24",
  # Sport-profile config loader (mediahub.sport_profiles) parses the
  # human-authored data/sport_profiles/*.yaml files. MIT-licensed, free.
  "PyYAML>=6.0",
  # Capability 2 (semantic memory): sqlite-vec stores vectors in a vec0 virtual
  # table for exact brute-force KNN recall (mediahub.memory.store). Pure-C,
  # dependency-free SQLite extension; MIT/Apache-2.0 dual.
  "sqlite-vec>=0.1.9,<0.2",
  # Phase C commercial layer (web/auth.py + web/billing.py). bcrypt hashes
  # account passwords; stripe is the official SDK for Checkout / Customer
  # Portal / webhook verification. Both optional at runtime — no STRIPE_* env
  # means billing 503s and the rest of the app is unaffected.
  "bcrypt>=4.0",
  "stripe>=7.0",
]

[project.optional-dependencies]
ai = [
  "anthropic>=0.30",
  "replicate>=0.25",
]
render = [
  # Playwright pin: the bundled Chromium revision must match what the
  # Dockerfile downloads at build time. Phase 1.5 audit pinned this to
  # 1.56 because the local dev environment had chromium-1194 (a revision
  # only available in playwright 1.56.x). Production Dockerfile installs
  # the matching chromium when it installs this version, so the runtime
  # discovery succeeds (PLAYWRIGHT_BROWSERS_PATH=/ms-playwright pinned
  # in the Dockerfile keeps the path stable).
  "playwright>=1.56,<1.58",
  "weasyprint>=60",
  # P0.1 free reel fallback (MEDIAHUB_REEL_ENGINE=ffmpeg): a static FFmpeg
  # binary with no system install. The wheel is BSD-2; the bundled binary is
  # a stock FFmpeg build invoked strictly as a subprocess.
  "imageio-ffmpeg>=0.4.9",
]
dev = [
  "pytest>=7.4",
  "pytest-xdist>=3.5",
  # reportlab is used by test_interpreter_corpus to synthesise PDF
  # fixtures so the corpus tests can run without external sample files.
  "reportlab>=4.0",
  # B5: property-based API contract testing (Schemathesis). tests/test_api_contract.py
  # honest-skips when it's absent, so this only enables the deeper fuzz; the plain
  # no-5xx smoke needs no extra dep. Pinned to the 3.x line whose API the test targets
  # (from_dict / get_all_operations / call_wsgi); the test also skips cleanly on any
  # API drift, so a future bump can't redden CI — only a real 5xx fails it.
  "schemathesis>=3.19,<4",
  # D1: re-run a failing test on demand (opt-in via --reruns) to tell a flake from a
  # real failure. Inert unless --reruns is passed, so the gating suite is unaffected.
  "pytest-rerunfailures>=12.0",
]
# D1 flake-hunting only — kept OUT of `dev` on purpose: pytest-randomly auto-shuffles
# test order when installed, and the GATING suite must stay deterministic. The separate
# flake-detection CI job installs `.[dev,flake]` and opts into randomisation.
flake = [
  "pytest-randomly>=3.15",
]

[project.scripts]
mediahub-web = "mediahub.web.__main__:main"

[project.urls]
Documentation = "https://github.com/your-org/mediahub#readme"
Repository    = "https://github.com/your-org/mediahub"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["mediahub*"]

[tool.setuptools.package-data]
"mediahub.graphic_renderer" = ["layouts/*.html", "layouts/*.css"]
"mediahub" = ["**/*.json"]
# Phase 1.6 Stage C — Adaptive Theming Engine static CSS files. The
# loader in mediahub.web.theme_tokens reads these at import time.
"mediahub.web" = ["static/theme/*.css"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::SyntaxWarning",
]

[tool.ruff]
# Repo-hygiene lint config. Scoped to the live package only: the read-only
# legacy/ tree and the vendored reference toolkits (vendor/) are excluded so
# turning ruff on never churns code we don't own or maintain.
target-version = "py311"
line-length = 100
extend-exclude = ["legacy", "vendor", "src/mediahub/remotion/node_modules"]

[tool.ruff.lint]
# Deliberately small starting rule set. Enabling ruff on the existing ~19k-line
# web.py monolith should surface real problems (syntax errors, undefined names,
# unused imports) without burying the team in style noise. Grow this list later.
#   E9  = syntax errors      F63/F7/F82 = real bugs (bad comparisons, undefined names)
#   F401 = unused imports    F811 = redefinitions
select = ["E9", "F63", "F7", "F82", "F401", "F811"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]            # re-exports are intentional
"tests/*" = ["F401", "F811"]        # fixtures / parametrised redefinitions
