[build-system]
requires = ["setuptools>=83.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mediahub"
version = "9.0.0"
description = "Sport content automation: upload meet results, get social-ready captions, cards, and graphics."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
  { name = "Sweep / MediaHub team" }
]
keywords = ["sport", "swimming", "content-automation", "social-media", "ai"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: End Users/Desktop",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Framework :: Flask",
]
dependencies = [
  "flask>=3.1.3",
  "markupsafe>=3.0.3",
  # WSGI server the deployed image (and requirements.txt) runs the app under.
  "gunicorn>=26.0.0",
  "requests>=2.34.2",
  "pdfplumber>=0.11.10",
  # pdfplumber pins pdfminer.six exactly (0.11.10 → ==20260107); keep this floor
  # equal to that pin and always bump the pair together, or pip-audit's resolver
  # goes ResolutionImpossible. See requirements.txt for the full note.
  "pdfminer.six>=20260107",
  "pypdf>=6.14.2",
  # Document engine (roadmap 1.15): deterministic PPTX/DOCX round-trip for the
  # programme / report / deck formats (take-it-elsewhere editing). Pure-Python.
  "python-pptx>=1.0.2",
  "python-docx>=1.2.0",
  "beautifulsoup4>=4.15.0",
  "lxml>=6.1.1",
  # Spreadsheet ingestion (interpreter/ingest.py _extract_xlsx): read .xlsx
  # results deterministically, read-only. MIT-licensed.
  "openpyxl>=3.1.5",
  "Pillow>=12.3.0",
  # 1.3 photo editor — decode iPhone HEIC/HEIF uploads to web-safe JPEG on
  # ingest (mediahub.media_library.heic). BSD-3 wrapper over bundled libheif
  # (manylinux wheels, no system libs). Decode-only; honest-errors if absent.
  "pillow-heif>=1.4.0",
  # Default cutout backend (MEDIAHUB_CUTOUT_PROVIDER=server): in-process rembg
  # runs the u2net ONNX model via onnxruntime to knock out card subjects. Both
  # ship as core in the deployed image (requirements.txt); onnxruntime is also
  # the shared runtime the local Piper voice reuses.
  "rembg>=2.0.76",
  "onnxruntime>=1.27.0",
  # Phase 1.6 Stage B — Adaptive Theming Engine colour-science package.
  # See requirements.txt and docs/THEMING.md.
  "materialyoucolor>=3.0.3",
  "coloraide>=8.10",
  "numpy>=2.4.6",
  # Sport-profile config loader (mediahub.sport_profiles) parses the
  # human-authored data/sport_profiles/*.yaml files. MIT-licensed, free.
  "PyYAML>=6.0.3",
  # 2FA enrolment QR (mediahub.web.qr, usability H-20): deterministic
  # in-process QR matrix for the otpauth:// provisioning URI. Tiny,
  # pure-Python, MIT-licensed. (Reinstated after the sites feature removal
  # took the previous consumer with it.)
  "segno>=1.6.6",
  # Scheduler (mediahub.scheduler / mediahub.workflow.schedule): croniter computes
  # cron / daily / weekly / monthly fire-times. MIT, maintained under Pallets-Eco.
  "croniter>=6.2.4",
  # G1.10 club custom-font upload pipeline (mediahub.typography.font_intake):
  # validate → subset → re-pack an uploaded brand typeface as a first-party
  # self-hosted WOFF2. The [woff] extra adds brotli/zopfli for WOFF2. MIT-licensed.
  "fonttools[woff]>=4.63.0",
  # Capability 2 (semantic memory): sqlite-vec stores vectors in a vec0 virtual
  # table for exact brute-force KNN recall (mediahub.memory.store). Pure-C,
  # dependency-free SQLite extension; MIT/Apache-2.0 dual.
  "sqlite-vec>=0.1.9,<0.2",
  # Phase C commercial layer (web/auth.py + web/billing.py). bcrypt hashes
  # account passwords; stripe is the official SDK for Checkout / Customer
  # Portal / webhook verification. Both optional at runtime — no STRIPE_* env
  # means billing 503s and the rest of the app is unaffected.
  "bcrypt>=5.0.0",
  "argon2-cffi>=25.1.0",
  "stripe>=15.3.1",
]

[project.optional-dependencies]
ai = [
  "anthropic>=0.117.0",
  "replicate>=1.0.7",
]
# W.10 OCR fallback for scanned/photographed result sheets (interpreter/ocr.py).
# Optional everywhere — with no engine the interpreter keeps the honest
# "image-needs-ocr" review flag. pytesseract drives the system `tesseract`
# binary (apt tesseract-ocr in the Dockerfile); pypdfium2 rasterises
# image-only PDF pages for OCR. Pure-pip alternative engine:
# rapidocr-onnxruntime (heavier wheel; onnxruntime already ships for rembg).
ocr = [
  "pytesseract>=0.3.13",
  "pypdfium2>=5.12.1",
]
# Optional PSD import (roadmap 1.21, interop/psd_import.py). psd-tools is
# MIT-licensed, pure-Python (reads .psd; renders the flattened composite via
# Pillow, already a core dep). Off by default — import_psd() honest-errors with
# a clear "install the psd extra" message when this is absent, never a stub.
psd = [
  "psd-tools>=1.17.4",
]
# Voiceover backends (operator-gated by MEDIAHUB_VOICEOVER=1). Roadmap 1.7 made
# local Piper the DEFAULT (zero-cost, fully offline; caption text never leaves
# the box). piper-tts is GPL-3.0-or-later, used only server-side in the
# hosted-only deployment (never conveyed to customers — no source-offer
# obligation, the same basis the repo relies on for AGPL SearXNG). onnxruntime
# already ships for rembg; a licence-clean CC BY 4.0 voice model is fetched into
# the image (scripts/fetch_piper_voice.py). With no voice present the route
# honest-errors (503) — never a fabricated voice.
voiceover = [
  "piper-tts>=1.4.2",
]
# The opt-in ONLINE alternative (MEDIAHUB_TTS_PROVIDER=edge): streams from a
# Microsoft endpoint, so caption text leaves the box. No longer the default (1.7).
voiceover-edge = [
  "edge-tts>=7.2.8",
]
render = [
  # Playwright pin: the bundled Chromium revision must match what the
  # Dockerfile downloads at build time. Pinned to the 1.61.x line, which
  # bundles Chromium revision 1228 (Chromium 149.0.7827.55). The production
  # Dockerfile installs that exact Chromium when it installs this version, so
  # runtime discovery succeeds (PLAYWRIGHT_BROWSERS_PATH=/ms-playwright pinned
  # in the Dockerfile keeps the path stable). Bump the floor and the <1.62
  # ceiling together so the Chromium revision stays aligned build↔runtime.
  "playwright>=1.61.0,<1.62",
  # P0.1 free reel fallback (MEDIAHUB_REEL_ENGINE=ffmpeg): a static FFmpeg
  # binary with no system install. The wheel is BSD-2; the bundled binary is
  # a stock FFmpeg build invoked strictly as a subprocess.
  "imageio-ffmpeg>=0.6.0",
]
dev = [
  "pytest>=9.1.1",
  "pytest-xdist>=3.8.0",
  # pytest-split shards the full suite across CI matrix jobs (unit-suite.yml):
  # `--splits N --group G` deterministically partitions the collected tests into
  # N balanced groups (by the committed `.test_durations` map), so N runners each
  # take ~1/N of the wall-clock. Coverage is total — every collected test lands in
  # exactly one group, and tests absent from the durations map are still run (they
  # just fall back to an average-time estimate for balancing). Refresh the map with
  # `pytest tests/ --ignore-glob='tests/test_autotest_*.py' --store-durations` and
  # commit `.test_durations`. MIT-licensed.
  "pytest-split>=0.11.0",
  # reportlab is used by test_interpreter_corpus to synthesise PDF
  # fixtures so the corpus tests can run without external sample files.
  "reportlab>=5.0.0",
  # B5: property-based API contract testing (Schemathesis). tests/test_api_contract.py
  # honest-skips when it's absent, so this only enables the deeper fuzz; the plain
  # no-5xx smoke needs no extra dep. Pinned to the 3.x line whose API the test targets
  # (from_dict / get_all_operations / call_wsgi); the test also skips cleanly on any
  # API drift, so a future bump can't redden CI — only a real 5xx fails it.
  "schemathesis>=4.23.0,<5",
  # D1: re-run a failing test on demand (opt-in via --reruns) to tell a flake from a
  # real failure. Inert unless --reruns is passed, so the gating suite is unaffected.
  "pytest-rerunfailures>=16.4",
]
# D1 flake-hunting only — kept OUT of `dev` on purpose: pytest-randomly auto-shuffles
# test order when installed, and the GATING suite must stay deterministic. The separate
# flake-detection CI job installs `.[dev,flake]` and opts into randomisation.
flake = [
  "pytest-randomly>=4.1.0",
]

[project.scripts]
mediahub-web = "mediahub.web.__main__:main"

[project.urls]
Documentation = "https://github.com/your-org/mediahub#readme"
Repository    = "https://github.com/your-org/mediahub"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["mediahub*"]

[tool.setuptools.package-data]
"mediahub.graphic_renderer" = ["layouts/*.html", "layouts/*.css"]
"mediahub" = ["**/*.json"]
# Roadmap 1.8 — the bundled, licence-clean audio pool (audio/assets/*). These
# first-party CC0 SFX/idents/beds ship in the wheel so the reel engine has sound
# with no operator setup. Regenerate with scripts/make_audio_assets.py.
"mediahub.audio" = ["assets/manifest.json", "assets/**/*"]
# Roadmap 1.10 — the bundled, brand-token-recolourable element library. The
# curated sport-editorial SVG packs (assets/svg/*.svg) ship in the wheel so the
# elements tab has content with no operator setup. The SVGs carry __SLOT__ token
# placeholders recoloured to the card's brand roles at render time
# (mediahub.elements.recolour). catalog.json is already covered by the **/*.json
# rule above; this adds the non-JSON SVG assets.
"mediahub.elements" = ["catalog.json", "assets/**/*"]
# Phase 1.6 Stage C — Adaptive Theming Engine static CSS files. The
# loader in mediahub.web.theme_tokens reads these at import time.
"mediahub.web" = ["static/theme/*.css"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::SyntaxWarning",
]

[tool.ruff]
# Repo-hygiene lint config. Scoped to the live package only: the read-only
# legacy/ tree and the vendored reference toolkits (vendor/) are excluded so
# turning ruff on never churns code we don't own or maintain.
target-version = "py311"
line-length = 100
extend-exclude = ["legacy", "vendor", "src/mediahub/remotion/node_modules"]

[tool.ruff.lint]
# Deliberately small starting rule set. Enabling ruff on the existing ~19k-line
# web.py monolith should surface real problems (syntax errors, undefined names,
# unused imports) without burying the team in style noise. Grow this list later.
#   E9  = syntax errors      F63/F7/F82 = real bugs (bad comparisons, undefined names)
#   F401 = unused imports    F811 = redefinitions
select = ["E9", "F63", "F7", "F82", "F401", "F811"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]            # re-exports are intentional
"tests/*" = ["F401", "F811"]        # fixtures / parametrised redefinitions
